# UQCompare

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: course.rs  mod.rs  requests.rs  router.rs  task.rs
backend/src/model/: models.rs  task.rs
backend/src/repository/: ddb.rs  ddb_attributes.rs  ddb_error.rs  mod.rs
local/: README.md
local/nginx/: nginx.conf
public/: course_ids.csv
src/: App.jsx  SearchContext.jsx
src/components/: CourseTile.jsx  CourseTileContainer.jsx  Courses.jsx  CoursesContainer.jsx  ECPSummary.jsx  Footer.jsx  Header.jsx  Poster.jsx  QnA.jsx  Review.jsx  Search.jsx  SearchModal.jsx
src/components/shared/: Header.jsx
src/components/styles/: courses.module.css  footer.module.css  header.module.css  index.css  poster.module.css  review.module.css
src/pages/: CoursePage.jsx  ErrorPage.jsx  MainPage.jsx  Root.jsx
src/pages/styles/: coursepage.module.css  error.module.css
