[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
