[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-rt = "2.2.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "^0.8", features = ["v4"]}
serde = { version = "^1", features = ["derive"]}
aws-config  = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"]}
derive_more = "0.13.0"
